Adjust CMakeLists style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ ADD_DEFINITIONS(-DXKBSWITCH_VERSION="${XKBSWITCH_VERSION}")
 # Check presence of development libraries required for build
 FIND_PACKAGE(X11 REQUIRED)
 if(NOT X11_FOUND)
-    message(FATAL_ERROR "Not found development files of 'libx11' required for build. (Install libx11-dev or libx11-devel package.) CMake will exit.")
+    MESSAGE(FATAL_ERROR "Not found development files of 'libx11' required for build. (Install libx11-dev or libx11-devel package.) CMake will exit.")
 elseif(NOT X11_Xkbfile_FOUND)
-    message(FATAL_ERROR "Not found development files of 'libxkbfile' required for build. (Install libxkbfile-dev or libxkbfile-devel package.) CMake will exit.")
+    MESSAGE(FATAL_ERROR "Not found development files of 'libxkbfile' required for build. (Install libxkbfile-dev or libxkbfile-devel package.) CMake will exit.")
 endif()
 INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
 LINK_DIRECTORIES(${X11_LIBRARY_DIR})
