--- a/.github/workflows/deb-build.yml
+++ b/.github/workflows/deb-build.yml
@@ -75,7 +75,7 @@ jobs:
       with:
         tag_name: "v${{ env.VERSION }}.${{ github.run_number }}"  # Example of using a pseudo semantic versioning
         release_name: "Version ${{ env.VERSION }}, pipeline run ${{ github.run_number }}"
-        draft: false  # Ensure the release is published
+        draft: true  # Ensure the release is published
         prerelease: false  # Change to false if you do not want it as a prerelease
 
     - name: Upload Release Asset
