CPack call moved to CMake. Added wrappers and new checks

--- a/.github/workflows/deb-build.yml
+++ b/.github/workflows/deb-build.yml
@@ -43,7 +43,7 @@ jobs:
       id: package
       run: |
         cd build
-        cpack -G DEB
+        cmake --build . --target create_deb
         DEB_FILE=$(ls *.deb)
         VERSION=$(echo $DEB_FILE | grep -oP '\d+\.\d+\.\d+')
         echo "DEB_FILE=${DEB_FILE}" >> "$GITHUB_OUTPUT"
